// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pushes should render with correct title 1`] = `
<div>
  <div
    className="container"
  >
    <div
      className="col-sm-6 col-sm-offset-3 mx-auto"
    >
      <h1>
        Signup / Login
      </h1>
      <p>
        <a
          className="card-link"
          href="/"
          onClick={[Function]}
        >
          Register/Login
        </a>
        <a
          className="card-link"
          href="/logout"
          onClick={[Function]}
        >
          Logout
        </a>
        <a
          className="card-link"
          href="/pushes"
          onClick={[Function]}
        >
          Push Notification
        </a>
        <a
          className="card-link"
          href="/users"
          onClick={[Function]}
        >
          List users
        </a>
      </p>
      <p>
        Please 
        <a
          href="/"
          onClick={[Function]}
        >
          Register/Login
        </a>
         first
      </p>
    </div>
  </div>
</div>
`;

exports[`Pushes should render without login / registeration form 1`] = `
<div>
  <div
    className="container"
  >
    <div
      className="col-sm-6 col-sm-offset-3 mx-auto"
    >
      <h1>
        Signup / Login
      </h1>
      <p>
        <a
          className="card-link"
          href="/"
          onClick={[Function]}
        >
          Register/Login
        </a>
        <a
          className="card-link"
          href="/logout"
          onClick={[Function]}
        >
          Logout
        </a>
        <a
          className="card-link"
          href="/pushes"
          onClick={[Function]}
        >
          Push Notification
        </a>
        <a
          className="card-link"
          href="/users"
          onClick={[Function]}
        >
          List users
        </a>
      </p>
      <p>
        Please 
        <a
          href="/"
          onClick={[Function]}
        >
          Register/Login
        </a>
         first
      </p>
    </div>
  </div>
</div>
`;

exports[`Pushes should show the form for push notification after login 1`] = `
<div>
  <div
    className="container"
  >
    <div
      className="col-sm-6 col-sm-offset-3 mx-auto"
    >
      <h1>
        Register
      </h1>
      <p>
        <a
          className="card-link"
          href="/"
          onClick={[Function]}
        >
          Register/Login
        </a>
        <a
          className="card-link"
          href="/logout"
          onClick={[Function]}
        >
          Logout
        </a>
        <a
          className="card-link"
          href="/pushes"
          onClick={[Function]}
        >
          Push Notification
        </a>
        <a
          className="card-link"
          href="/users"
          onClick={[Function]}
        >
          List users
        </a>
      </p>
      <div
        className="card form-group"
      >
        <div
          className="card-body"
        >
          <div
            className="card-text"
          >
            <h4
              className="card-title"
            >
              Current User
            </h4>
            <div>
              <dt>
                username
              </dt>
              <dd>
                abc
              </dd>
            </div>
            <div>
              <dt>
                accessToken
              </dt>
              <dd>
                123
              </dd>
            </div>
          </div>
        </div>
      </div>
      <form
        action="/pushes"
        method="post"
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <label>
            Notification Title
          </label>
          <input
            className="form-control"
            name="title"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group"
        >
          <label>
            Notification Body
          </label>
          <input
            className="form-control"
            name="body"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group"
        >
          <input
            className="form-control"
            name="type"
            onChange={[Function]}
            type="hidden"
            value=""
          />
        </div>
        <button
          className="btn btn-warning btn-lg"
          type="submit"
        >
          Push
        </button>
      </form>
    </div>
  </div>
</div>
`;
